Fix cross navigation layout shift issue

--- a/src/_includes/components/announcement.css
+++ b/src/_includes/components/announcement.css
@@ -10,6 +10,7 @@
 	width: calc(100% + 2rem);
 	margin-left: -1rem;
 	margin-right: -1rem;
+	line-height: 1;
 }
 @media (min-width: 48em) { /* 768px */
 	.announcement {
